<resources>
    <string name="app_name">Phomello Trigger POS</string>
    <string name="app_modelname">Phomello Trigger POS - Billing POS System(PHU-S01)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_printer">Select Printer : </string>
    <string name="printer_Wifi_IPPORT">IP Address : </string>
    <string name="wifi_iphint">192.168.5.87:9100</string>
    <string name="save">Save</string>
    <string name="plsinsrtIp">Please insert IP of Wifi Printer</string>
    <string name="noSet">No Setting found!!!</string>
    <string name="savesucc">Saved Successfully</string>
    <string name="wificonnect">WiFi Connection</string>
    <string name="connect_to_ip_btn">connect to IP</string>
    <string name="print">Print</string>
    <string name="chkpriset">Please check printer settings.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item_category">ItemCategoryActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_recept">ReceptActivity</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="title_activity_setttings">SetttingsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_change_price">ChangePriceActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="title_activity_edit_item_category">EditItemCategoryActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="title_activity_activate_email">Activate Email</string>
    <string name="title_activity_activate">ActivateActivity</string>
    <string name="title_activity_retail">RetailActivity</string>
    <string name="title_activity_mian_category_list">MianCategoryListActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_recept_detail">ReceptDetailActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_data_base">DataBaseActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_daily_sales">DailySalesActivity</string>
    <string name="title_activity_item_summary">ItemSummaryActivity</string>
    <string name="title_activity_mini_postest">MiniPOSTestActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_customer_group">CustomerGroupActivity</string>
    <string name="title_activity_cuustomer_list">CuustomerListActivity</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="title_activity_supplier_group">SupplierGroupActivity</string>
    <string name="title_activity_supplier_group_list">SupplierGroupListActivity</string>
    <string name="title_activity_supplier">SupplierActivity</string>
    <string name="title_activity_supplier_list">SupplierListActivity</string>
    <string name="title_activity_test_autocomplete">testAutocomplete</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_read_json">ReadJson</string>
    <string name="title_activity_bussiness_group">BussinessGroupActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_bussiness_group_list">BussinessGroupListActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_bussiness_group_check_list">BussinessGroupCheckListActivity
    </string>
    <string name="title_activity_manufacture">ManufactureActivity</string>
    <string name="title_activity_manufacture_list">ManufactureListActivity</string>
    <string name="title_activity_item_check_list">ItemCheckListActivity</string>
    <string name="title_activity_tax">TaxActivity</string>
    <string name="title_activity_tax_list">TaxListActivity</string>
    <string name="title_activity_order_type_list">OrderTypeListActivity</string>
    <string name="title_activity_item_group_check_list">ItemGroupCheckListActivity</string>
    <string name="title_activity_order_type_check_list">OrderTypeCheckListActivity</string>
    <string name="title_activity_suppier_group_check_list">SuppierGroupCheckListActivity</string>
    <string name="title_activity_item_wise_report">ItemWiseReportActivity</string>
    <string name="title_activity_invoice_header_report">InvoiceHeaderReportActivity</string>
    <string name="title_activity_category_sale_report">CategorySaleReportActivity</string>
    <string name="login">Login</string>
    <string name="charge">Checkout</string>
    <string name="title_activity_user_item_tax">UserItemTaxActivity</string>
    <string name="title_activity_user_system_tax">UserSystemTaxActivity</string>
    <string name="title_activity_user_system_discount">UserSystemDiscountActivity</string>
    <string name="title_activity_user_sys_discount_acivity">UserSysDiscountAcivity</string>
    <string name="title_activity_order_tax_report">OrderTaxReportActivity</string>
    <string name="title_activity_item_tax_report">ItemTaxReportActivity</string>
    <string name="title_activity_order_summary_report">OrderSummaryReportActivity</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="title_activity_opening_balance">OpeningBalanceActivity</string>
    <string name="title_activity_expenses_list">ExpensesListActivity</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_activity_x__z">X_ZActivity</string>
    <string name="title_activity_order_detail_report">OrderDetailReportActivity</string>
    <string name="title_activity_item_detail_report">ItemDetailReportActivity</string>
    <string name="title_activity_monthly_report">MonthlyReportActivity</string>
    <string name="title_activity_monthly_sales_report">MonthlySalesReportActivity</string>
    <string name="title_activity_user_llist">UserLlistActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_bluetooth_device_list">BluetoothDeviceListActivity</string>
    <string name="bluetooth_button_scan">Scan for devices</string>
    <string name="bluetooth_none_found">No devices found</string>
    <string name="bluetooth_select_device">select a device to connect</string>
    <string name="bluetooth_scanning">scanning for devices...</string>
    <string name="bluetooth_none_paired">No devices have been paired</string>
    <string name="bluetooth_strLang">en</string>
    <string name="title_activity_zclose_report">ZCloseReportActivity</string>
    <string name="title_activity_order_tax">OrderTaxActivity</string>
    <string name="title_activity_order_item_tax">OrderItemTaxActivity</string>
    <string name="nointernet">Internet not available</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="activate">Activate</string>
    <string name="email">Email</string>
    <string name="bussiness_group_code">Bussiness Group Code</string>
    <string name="bussiness_group_name">Bussiness Group Name</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="Enterremarks">Enter remarks</string>
    <string name="S_No">S_No.</string>
    <string name="Code">Code</string>
    <string name="Category">Category</string>
    <string name="qty">Qty</string>
    <string name="CostPrice">Cost Price *</string>
    <string name="SalePrice">Sale Price *</string>
    <string name="Tax">Tax</string>
    <string name="Discount">Discount</string>
    <string name="LineTotal">Line Total</string>
    <string name="Profit">Profit</string>
    <string name="about_contant"><![CDATA[Trigger POS is the perfect solution for faster billing and customer service. A Simple POS system for ALL your needs… Trigger POS is indispensable in todays retail and hospitality sectors. It is efficient, easy to use and versatile. It is sure to make operating your business easier. Developed by Pegasus, a pioneer company producing POS systems for a wide variety of sectors and applications since past decade. From the small local restaurant to the large hotel, from the local taxi service to an international travel agency , no matter what your business is, with our TriggerPOS software you can simplify your day to day billing activities. Instant tokens, fast billing, staff management and discount creation, all this can be easily accomplished with one system.]]></string>
    <string name="ExpiryDate">Expiry Date</string>
    <string name="Activate">Activate</string>
    <string name="Email">Email</string>
    <string name="No_Buss_Grp_Fnd">No Bussiness Group Found</string>
    <string name="No_Catgy_Fnd">No Category Found</string>
    <string name="No_Report_Found">No Report Found</string>
    <string name="Price">Price</string>
    <string name="Quantity">Qty</string>
    <string name="Title">Title</string>
    <string name="ContactCode">Contact Code</string>
    <string name="ContactName">Contact Name *</string>
    <string name="Gender">Gender</string>
    <string name="DOB">DOB/AGE</string>
    <string name="Next">Next</string>
    <string name="Manufacture">Manufacture</string>
    <string name="ItemName">Item Name</string>
    <string name="SKU">SKU</string>
    <string name="Barcode">Barcode</string>
    <string name="Is_Rtrn_Stckble">Is Return Stockable</string>
    <string name="IsService">Is Service</string>
    <string name="Item">Item</string>
    <string name="Opening_Balance">Opening Balance</string>
    <string name="Expenses">Expenses</string>
    <string name="X_Z">X-Z</string>
    <string name="Update_License">Update License</string>
    <string name="Post">Upload</string>
    <string name="Cancel">Cancel</string>
    <string name="About">About</string>
    <string name="Contact">Contact</string>
    <string name="Database">Database</string>
    <string name="Item_Category">Item Category</string>
    <string name="Manager">Manager</string>
    <string name="Order_Type">Order Type</string>
    <string name="Profile">Profile</string>
    <string name="Receipt">Order</string>
    <string name="Report">Report</string>
    <string name="Settings">Settings</string>
    <string name="User">User</string>
    <string name="Logout">Logout</string>
    <string name="Check_Out">Check Out</string>
    <string name="Clear">Clear</string>
    <string name="Order">Order</string>
    <string name="hsn_code">HSN/SAC Code</string>
    <string name="Item_Type">Item Type</string>
    <string name="Unit">Unit</string>
    <string name="reset">Reset</string>
    <string name="price_including_tax">Price including tax</string>
    <string name="reservation">Reservation</string>
    <string name="payment_collection">Payment Collection</string>
    <string name="select_image">Select Image</string>
    <string name="search_order">Search Order</string>
    <string name="support">Support</string>
    <string name="get_files">Get Files</string>
    <string name="accounts">Accounts</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="returns">Return</string>
    <string name="purchase">Purchase</string>
    <string name="send_database">Send Database</string>
    <string name="item_code_auto_generated">Item Code (Auto Generated)</string>
    <string name="item_name_l">Item Name (L)</string>
    <string name="help">Help</string>
    <string name="privacychange">Privacy Policy</string>
    <string name="printtest">Printer Settings</string>
    <string name="vehiclehistory">Vehicle History</string>
</resources>