<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting"
        android:title="@string/Settings">

    </item>
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/customer"
        android:title="@string/User" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/Profile" />
    <item
        android:id="@+id/nav_database"
        android:icon="@drawable/database"
        android:title="@string/Database" />

    <item
        android:id="@+id/nav_man"
        android:icon="@drawable/manager"
        android:title="@string/Manager" />
    <item
        android:id="@+id/nav_Report"
        android:icon="@drawable/report"
        android:title="@string/Report" />
    <item
        android:id="@+id/nav_send_db"
        android:icon="@drawable/send_database"
        android:title="@string/send_database" />

    <item
        android:id="@+id/nav_ab"
        android:icon="@drawable/about"
        android:title="@string/About" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/Logout" />
</menu>