<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_post"
        android:enabled="true"
        android:title="@string/Post"
        android:icon="@drawable/bnav_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:enabled="true"
        android:title="@string/save"
        android:icon="@drawable/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cancel"
        android:enabled="true"
        android:title="@string/Cancel"
        android:icon="@drawable/bnav_cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:enabled="true"
        android:title="@string/delete"
        android:icon="@drawable/bnav_delete"
        app:showAsAction="ifRoom" />
</menu>